applications/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd
    argocd.argoproj.io/instance: applications
    app.kubernetes.io/part-of: argocd
spec:
  entryPoints:
    - argocd
  routes:
    - kind: Rule
      match: Host(`boulder.local`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`boulder.local`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
